fix(bal-radio, label): label font-size fixed, radio margins aligned with checkboxes

--- a/packages/components/src/components/form/bal-radio/bal-radio.scss
+++ b/packages/components/src/components/form/bal-radio/bal-radio.scss
@@ -8,7 +8,8 @@ bal-radio.bal-radio:not(.bal-select-button) {
   align-items: center;
   outline: none;
   min-width: 24px;
-  min-height: 48px;
+  min-height: 24px;
+  margin-bottom: var(--bal-space-6);
 
   &.is-dense {
     min-height: 24px;
@@ -37,7 +38,7 @@ bal-radio.bal-radio:not(.bal-select-button) {
 
     display: flex;
     align-items: center;
-    align-self: center;
+    align-self: flex-start;
     justify-content: center;
     text-align: left;
 
